cedar-lean/UnitTest/parser_tests/negative/unclosed_record.cedar
permit(principal, action, resource) when { {"a": 1 };
